feat: adds kafka to avoid group by daily purchases
